# generic-timer

./: CMakeLists.txt  LICENSE  README.md  main.cpp
timer_service/: CMakeLists.txt  timer_service.cpp  timer_service.h
